--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
+    "test": "jasmine"
   },
   "private": true,
   "dependencies": {
@@ -26,9 +21,10 @@
     "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor-community/sqlite": "^5.4.1",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
+    "@capacitor/android": "^5.5.1",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
-    "@capacitor/core": "5.4.2",
+    "@capacitor/core": "^5.5.1",
     "@capacitor/device": "^5.0.6",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
@@ -66,7 +62,9 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine": "^5.1.0",
     "jasmine-core": "~4.6.0",
+    "jasmine-marbles": "^0.9.2",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
